--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+# Dependencies
+markdown:         redcarpet
+highlighter:         true
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
@@ -20,3 +23,9 @@ author:
 
 # Custom vars
 version:             1.0.0
+
+github:
+  repo:           github.com/eswizardry/eswizardry.github.io
+
+# This is the list of pages to incldue in the header of the website.
+pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
