--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
-markdown:         redcarpet
-highlighter:         true
+markdown:         kramdown
+highlighter:      pygments
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
