--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ tagline: 'embedded system, coding and fascinating things.'
 description: > # this means to ignore newlines until "baseurl:"
     More on embedded system, coding, android, technology, thought and fascinating things.
 
-baseurl: '' # the subpath of your site, e.g. /blog/
+baseurl: '/eswizardry' # the subpath of your site, e.g. /blog/
 url: https://eswizardry.github.io/ # the base hostname & protocol for your site
 twitter_username: eswizardry
 github_username:  eswizardry
