--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: esWizardry
-email: your-email@domain.com
+email: eswizardry@gmail.com
 tagline: 'embedded system, programming and fascinating things.'
 description: > # this means to ignore newlines until "baseurl:"
     More on embedded system, programming, android, technology, thought and fascinating things.
