--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: '' # the subpath of your site, e.g. /blog/
 url: https://eswizardry.github.io/ # the base hostname & protocol for your site
 twitter_username: eswizardry
+googleplus_username:  +BanchaRajainthong
 github_username:  eswizardry
 paginate:            1
 
@@ -29,6 +30,10 @@ pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
 # Dependencies
 markdown: kramdown
 highlighter: pygments
+
+# Sitemap
+gems:
+  - jekyll-sitemap
 
 # Permalinks
 #
