--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
     More on embedded system, programming, android, technology, thought and fascinating things.
 
 baseurl: '' # the subpath of your site, e.g. /blog/
-url: eswizardry.com # the base hostname & protocol for your site
+url: http://eswizardry.com # the base hostname & protocol for your site
 twitter_username: eswizardry
 googleplus_username:  +BanchaRajainthong
 github_username:  eswizardry
