--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ github:
 pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
 
 # Dependencies
+highlighter: true
 markdown: kramdown
 highlighter: pygments
 
