--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,12 @@ pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
 highlighter: true
 markdown: kramdown
 highlighter: rouge
+# change the default .highlight CSS class name to .syntax
+kramdown:
+  input: GFM
+  syntax_highlighter_opts:
+    default_lang: html
+    css_class   : 'syntax'
 
 # Sitemap
 gems:
